feat: Paginate products from category